--- a/index.html
+++ b/index.html
@@ -18,3 +18,5 @@
         <input type="number" id="preisInput" placeholder="Einkaufspreis"> <br>
         <button id="submitButton">Submit</button>
     </main>
+</body>
+</html>
