--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Einkaufsrechner</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
     <script src="index.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Einkaufsbudget</h1> <h2 id="Month"></h2>
+        <h1>Einkaufsbudget Ashsyiqah</h1> <h2 id="Month"></h2>
     </header>
     <main>
-        <h3>Aktuelles Budget: <span id="einkaufsBudget">300€</span></h3>
+        <h3>Aktuelles Budget: <span id="einkaufsBudget">200€</span></h3>
         <input type="number" id="preisInput" placeholder="Einkaufspreis"> <br>
         <button id="submitButton">Submit</button>
+        <br>
+        <a href="./sophjan.html">Sophjans Budget</a>
     </main>
 </body>
 </html>
