--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="number" id="preisInput" placeholder="Einkaufspreis"> <br>
         <button id="submitButton">Submit</button>
         <br>
-        <a href="./sophjan.html">Sophjans Budget</a>
+        <a href="./sophjan.html">Sophjan Budget</a>
     </main>
 </body>
 </html>
