--- a/sophjan.html
+++ b/sophjan.html
@@ -12,7 +12,7 @@
         <h1>Einkaufsbudget Sophjan</h1> <h2 id="Month"></h2>
     </header>
     <main>
-        <h3>Aktuelles Budget: <span id="einkaufsBudget">100€</span></h3>
+        <h3>Aktuelles Budget: <span id="einkaufsBudgeSop">100€</span></h3>
         <input type="number" id="preisInput" placeholder="Einkaufspreis"> <br>
         <button id="submitButton">Submit</button>
 
